--- a/index.html
+++ b/index.html
@@ -70,6 +70,6 @@
     </main>
     <!-- Include Socket.io and custom scripts -->
     <script src="/socket.io/socket.io.js"></script>
-    <script src="scripts.js"></script>
+    <script src="game.js"></script>
 </body>
 </html>
