--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
+<!-- index.html -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Sharing Platform</title>
+    <title>TAYDOT WATCH</title>
+    <meta name="description" content="TAYDOT WATCH - A platform to share and view videos.">
+    <meta name="keywords" content="video, sharing, platform, TAYDOT WATCH">
+    <meta name="author" content="Your Name">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -53,7 +58,7 @@
         </section>
 
         <!-- Videos Section -->
-        <section id="videos-section">
+        <section id="videos-section" style="display:none;">
             <h2>Uploaded Videos</h2>
             <div id="videos"></div>
         </section>
