--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TAYDOT WATCH</title>
-    <meta name="description" content="TAYDOT WATCH - A platform to share and view videos.">
+    <meta name="description" content="TAYDOT WATCH - A platform to share, chatting and view videos.">
     <meta name="keywords" content="video, sharing, platform, TAYDOT WATCH">
-    <meta name="author" content="Your Name">
+    <meta name="author" content="Alvin Pieterson">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
